# rodinia-dpct-dpcpp

./: .gitignore  LICENSE  README.md  time_cuda.sh  time_dpcpp.sh
common/: make.config
cuda/: Makefile
cuda/b+tree/: Makefile
cuda/bfs/: bfs.cu
cuda/cfd/: euler3d  euler3d_double  euler3d_double.cu  helper_timer.h  pre_euler3d  pre_euler3d.cu  pre_euler3d_double  pre_euler3d_double.cu
cuda/dwt2d/: Makefile  components.cu  main.cu
cuda/gaussian/: Makefile  gaussian  gaussian.cu
cuda/heartwall/: heartwall  main.cu
cuda/hotspot/: Makefile  hotspot  hotspot.cu
cuda/hotspot3D/: 3D  Makefile  opt1.cu
cuda/huffman/: pavle
cuda/lavaMD/: lavaMD
cuda/nn/: hurricane_gen  nn  nn_cuda.cu
cuda/nw/: Makefile  needle  needle.cu
cuda/particlefilter/: Makefile  ex_particle_CUDA_float_seq.cu  ex_particle_CUDA_naive_seq.cu  particlefilter_float  (+1 more)
dpcpp/: Makefile  common.hpp
dpct_output/: b+tree.dpctout  backprop.dpctout  bfs.dpctout  cfd.dpctout  dwt2d.dpctout  gaussian.dpctout  heartwall.dpctout  hotspot.dpctout  hotspot3D.dpctout  huffman.dpctout  hybridsort.dpctout  kmeans.dpctout  lavaMD.dpctout  leukocyte.dpctout  lud.dpctout  mummergpu.dpctout  myocyte.dpctout  nn.dpctout  particlefilter_float.dpctout  particlefilter_naive.dpctout  pathfinder.dpctout  srad.dpctout  streamcluster.dpctout
rodinia/: Makefile  timeAll.sh  timeCUDA.sh  timeOneAPI.sh  time_all.sh  time_cuda.sh  time_dpcpp.sh
rodinia/dpcpp/b+tree/: CMakeLists.txt  main.c.dp.cpp
rodinia/dpcpp/b+tree/kernel/: kernel_gpu_cuda.dp.cpp
rodinia/dpcpp/b+tree/util/cuda/: cuda.dp.cpp
(+303 files in other folders)
